@@ -7,7 +7,7 @@
 	forum's SSI.php file.
 *******************************************************************************/
 
-//	Pretty URLs - Base v0.9
+//	Pretty URLs - Base v1.0RC
 
 //	If SSI.php is in the same place as this file, and SMF isn't defined, this is being run standalone.
 if (file_exists(dirname(__FILE__) . '/SSI.php') && !defined('SMF'))
@@ -120,7 +120,7 @@ $tasks[] = 'Adding some settings';
 
 //	Run maintenance
 require_once($sourcedir . '/Subs-PrettyUrls.php');
-pretty_run_maintenance();
+pretty_run_maintenance(true);
 $tasks[] = 'Running maintenance tasks';
 $tasks[] = $context['pretty']['maintenance_tasks'];
 
